SLI-2562 Fix Quality Gate